Add living costs form section

--- a/index.html
+++ b/index.html
@@ -546,6 +546,72 @@
                         <span>+</span>
                     </div>
                 </details>
+                <details>
+                    <summary class="drop"><h2>Living Costs</h2></summary>
+                    <div class="user-input">
+                        <label for="groceries">Groceries</label>
+                        <input type="number" id="groceries" name="groceries" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="clothing-footwear">Clothing & Footwear</label>
+                        <input type="number" id="clothing-footwear" name="clothing-footwear" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="personal-healthcare">Personal Healthcare</label>
+                        <input type="number" id="personal-healthcare" name="personal-healthcare" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="beauty-grooming">Beauty & Grooming</label>
+                        <input type="number" id="beauty-grooming" name="beauty-grooming" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="repairs-maintenance">Repairs & Household Maintenance</label>
+                        <input type="number" id="repairs-maintenance" name="repairs-maintenance" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="user-input">
+                        <label for="cleaning">Cleaning Services</label>
+                        <input type="number" id="cleaning" name="cleaning" placeholder="0">
+                        <select name="period" class="period">
+                            <option value="Daily">Daily</option>
+                            <option value="Weekly">Weekly</option>
+                            <option value="Monthly" selected>Monthly</option>
+                            <option value="Yearly">Yearly</option>
+                        </select>
+                    </div>
+                    <div class="add-box">
+                        <span>+</span>
+                    </div>
+                </details>
             </form>
         </div>
     </section>
