Add add more boxes buttons

--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -183,7 +184,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -239,7 +241,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -305,7 +308,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -391,7 +395,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -487,7 +492,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -543,7 +549,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -609,7 +616,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -665,7 +673,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
                 <details>
@@ -731,7 +740,8 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <span>+</span>
+                        <button class="add-box-btn">+</button>
+                        <p>Add more boxes</p>
                     </div>
                 </details>
             </form>
