Add calculate button

--- a/index.html
+++ b/index.html
@@ -744,6 +744,9 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
+                <div id="calculate">
+                    <button id="calc-btn">Calculate</button>
+                </div>
             </form>
         </div>
     </section>
