Add footer and copyright info

--- a/index.html
+++ b/index.html
@@ -750,6 +750,9 @@
             </form>
         </div>
     </section>
+    <footer>
+        <p>Copyright<span>&#xa9;</span> Martin Ward 2021</p>
+    </footer>
     
     <script src="assets/js/script.js"></script>
 </body>
