Add event listeners to all buttons

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -184,7 +184,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -241,7 +241,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -308,7 +308,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -395,7 +395,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -492,7 +492,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -549,7 +549,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -616,7 +616,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -673,7 +673,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -740,7 +740,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn">+</button>
+                        <button class="add-box-btn" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
