--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Personal Budget Calculator</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/pbc_icon.ico"/>    
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Load the AJAX API-->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
     <header>
@@ -105,7 +107,7 @@
                     <summary class="drop"><h2>Finances & Debt</h2></summary>
                     <div class="user-input">
                         <label for="personal-loan">Personal Loan</label>
-                        <input type="number" id="personal-loan" class="expense finances" name="personal-loan" placeholder="£" step="0.01" min="0">
+                        <input type="number" id="personal-loan" class="expense finances" value="333.65" name="personal-loan" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
@@ -162,7 +164,7 @@
                     <summary class="drop"><h2>Savings</h2></summary>
                     <div class="user-input">
                         <label for="savings-pay">Savings Account Payments</label>
-                        <input type="number" id="savings-pay" class="expense Savings" name="savings-pay" placeholder="£" step="0.01" min="0">
+                        <input type="number" id="savings-pay" class="expense savings" value="500" name="savings-pay" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
@@ -567,8 +569,7 @@
     </section>
     <footer>
         <p>Copyright<span> &#xa9;</span> 2021 Martin Ward</p>
-    </footer>
-    
-    <script src="assets/js/script.js"></script>
+    </footer>    
+    <script src="assets/js/script.js"></script>    
 </body>
 </html>
