Center and size chart

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <summary class="drop"><h2>Finances & Debt</h2></summary>
                     <div class="user-input">
                         <label for="personal-loan">Personal Loan</label>
-                        <input type="number" id="personal-loan" class="expense finances" value="333.65" name="personal-loan" placeholder="£" step="0.01" min="0">
+                        <input type="number" id="personal-loan" class="expense finances" name="personal-loan" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
@@ -164,7 +164,7 @@
                     <summary class="drop"><h2>Savings</h2></summary>
                     <div class="user-input">
                         <label for="savings-pay">Savings Account Payments</label>
-                        <input type="number" id="savings-pay" class="expense savings" value="500" name="savings-pay" placeholder="£" step="0.01" min="0">
+                        <input type="number" id="savings-pay" class="expense savings" name="savings-pay" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
