Add identifying class labels to add bpx buttons. Use event target to get last clicked button and retrieve class name

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn income" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -156,7 +156,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense finances" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -183,7 +183,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense savings" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -240,7 +240,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense bills" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -307,7 +307,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense insurance" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -384,7 +384,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense subscriptions" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -421,7 +421,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense transport" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -468,7 +468,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense living" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -505,7 +505,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense family" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
@@ -552,7 +552,7 @@
                         </select>
                     </div>
                     <div class="add-box">
-                        <button class="add-box-btn" type="button">+</button>
+                        <button class="add-box-btn expense leisure" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
                 </details>
