Add script to target add box buttons to insert template literals into the correct area of the DOM

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="income-btn">
                         <button class="add-box-btn income" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -155,7 +155,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="finances-btn">
                         <button class="add-box-btn expense finances" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -182,7 +182,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="savings-btn">
                         <button class="add-box-btn expense savings" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -239,7 +239,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="bills-btn">
                         <button class="add-box-btn expense bills" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -306,7 +306,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="insurance-btn">
                         <button class="add-box-btn expense insurance" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -383,7 +383,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="subscriptions-btn"> 
                         <button class="add-box-btn expense subscriptions" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -420,7 +420,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="transport-btn">
                         <button class="add-box-btn expense transport" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -467,7 +467,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="living-btn">
                         <button class="add-box-btn expense living" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -504,7 +504,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="family-btn">
                         <button class="add-box-btn expense family" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
@@ -551,7 +551,7 @@
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
-                    <div class="add-box">
+                    <div class="add-box" id="leisure-btn">
                         <button class="add-box-btn expense leisure" type="button">+</button>
                         <p>Add more boxes</p>
                     </div>
