Change reset form input to button element and add script to reload the page in the event listener

--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                 </details>
                 <div id="calculate">
                     <button id="calc-btn" type="button">Calculate</button>
-                    <input type="reset" value="Reset Form">
+                    <button id="reset-btn" type="reset">Reset Form</button>
                 </div>
             </form>
         </div>
