--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="user-input">
                         <label for="child-sup">Child Support</label>
-                        <input type="number" id="child-sup" class="expense finances" name="child-sup" placeholder="£" step="0.01" min="0">
+                        <input type="number" id="child-sup" class="expense finances" name="child-sup"   A placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
@@ -565,6 +565,8 @@
     </section>
     <section>
         <div id="results">
+            <div id="chart">
+            </div>
         </div>
     </section>
     <footer>
