Add for loop at end of calculate function to reset all drop down buttons back to monthly. Add missing class name to addBox template literal

--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
                         <input type="number" id="fuel" class="expense transport user-value" name="fuel" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
-                            <option value="weekly" selected>Weekly</option>
-                            <option value="monthly">Monthly</option>
+                            <option value="weekly">Weekly</option>
+                            <option value="monthly" selected>Monthly</option>
                             <option value="yearly">Yearly</option>
                         </select>
                     </div>
