Add function to auto scroll when details elements are open so info doesn't get lost off the bottom of the screen. Add function to return window to the top of the page on reload

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Finances & Debt</h2></summary>
                     <div class="user-input">
                         <label for="personal-loan">Personal Loan</label>
@@ -160,7 +160,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Savings</h2></summary>
                     <div class="user-input">
                         <label for="savings-pay">Savings Account Payments</label>
@@ -187,7 +187,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Household Bills</h2></summary>
                     <div class="user-input">
                         <label for="mortgage-rent">Mortgage/Rent</label>
@@ -244,7 +244,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Insurance</h2></summary>
                     <div class="user-input">
                         <label for="home-insurance">Home Insurance</label>
@@ -311,7 +311,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Subscriptions & Direct Debits</h2></summary>
                     <div class="user-input">
                         <label for="internet">Internet</label>
@@ -388,7 +388,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Transport</h2></summary>
                     <div class="user-input">
                         <label for="vehicle-tax">Vehicle Tax</label>
@@ -425,7 +425,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Living Costs</h2></summary>
                     <div class="user-input">
                         <label for="groceries">Groceries</label>
@@ -472,7 +472,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Family</h2></summary>
                     <div class="user-input">
                         <label for="child-care">Child Care</label>
@@ -509,7 +509,7 @@
                         <p>Add more boxes</p>
                     </div>
                 </details>
-                <details>
+                <details class="drop-down">
                     <summary class="drop"><h2>Leisure</h2></summary>
                     <div class="user-input">
                         <label for="eating-out">Eating Out</label>
