--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
     <!-- Form Section -->
     <section>
-        <div classs="container">
+        <div class="form-container">
             <form>
                 <details open>
                     <summary class="drop"><h2>Income</h2></summary>
                     <div class="user-input">
-                        <label for="wages">Wages (after tax)</label>
+                        <label for="wages">Wages</label>
                         <input type="number" id="wages" class="income user-value" name="wages" value="" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -69,7 +69,7 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="rent">Rent from lodgers/tenants</label>
+                        <label for="rent">Rent (received)</label>
                         <input type="number" id="rent" class="income user-value" name="rent" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -79,7 +79,7 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="child-sup-rec">Child support received</label>
+                        <label for="child-sup-rec">Child Support</label>
                         <input type="number" id="child-sup-rec" class="income user-value" name="child-sup-rec" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -163,7 +163,7 @@
                 <details class="drop-down">
                     <summary class="drop"><h2>Savings</h2></summary>
                     <div class="user-input">
-                        <label for="savings-pay">Savings Account Payments</label>
+                        <label for="savings-pay">Savings Account</label>
                         <input type="number" id="savings-pay" class="expense savings user-value" name="savings-pay" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -173,7 +173,7 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="child-savings">Child Savings/Trust Fund</label>
+                        <label for="child-savings">Child Savings</label>
                         <input type="number" id="child-savings" class="expense savings user-value" name="child-savings" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -312,7 +312,7 @@
                     </div>
                 </details>
                 <details class="drop-down">
-                    <summary class="drop"><h2>Subscriptions & Direct Debits</h2></summary>
+                    <summary class="drop"><h2>Subscriptions</h2></summary>
                     <div class="user-input">
                         <label for="internet">Internet</label>
                         <input type="number" id="internet" class="expense subscriptions user-value" name="internet" placeholder="£" step="0.01" min="0">
@@ -334,7 +334,7 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="tv-subscriptions">TV Subscriptions (Sky, Virgin Media, BT etc)</label>
+                        <label for="tv-subscriptions">TV Services</label>
                         <input type="number" id="tv-subscriptions" class="expense subscriptions user-value" name="tv-subscriptions" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
@@ -344,7 +344,7 @@
                         </select>
                     </div>
                     <div class="user-input">
-                        <label for="streaming">Streaming Services (Netflix, Now TV, Prime Video etc)</label>
+                        <label for="streaming">Streaming Services</label>
                         <input type="number" id="streaming" class="expense subscriptions user-value" name="streaming" placeholder="£" step="0.01" min="0">
                         <select name="period" class="period">
                             <option value="daily">Daily</option>
