--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     How to use
                 </summary>
                 <div id="how-to-info">
-                    Select your currency then fill in the form with your predicted expenditure for the month. Each box has the option to calculate daily, weekly, monthly, or yearly. Select the appropriate option for each item. If more boxes are needed you can create more by clicking the <span id="green">+</span> button and remove them by clicking the <span id="red">&#x2716;</span> button. Once all of your details have been entered, click the calculate button to view your monthly budget results. Form data can be amended and re-calculated if you wish to see how the changes impact on the results.
+                    Select your currency then fill in the form with your predicted expenditure for the month. Each box has the option to calculate daily, weekly, monthly, or yearly. Select the appropriate option for each item. If an item is not applicable to you, leave the input box blank (this will be counted as 0). If more boxes are needed you can create more by clicking the <span id="green">+</span> button and remove them by clicking the <span id="red">&#x2716;</span> button. Once all of your details have been entered, click the calculate button to view your monthly budget results. Form data can be amended and re-calculated if you wish to see how the changes impact on the results.
                 </div>
             </details>
         </div>
@@ -563,9 +563,12 @@
             </form>
         </div>
     </section>
+
+    <!-- Results section -->
     <section>
         <div id="results">
         </div>
+        <!-- Pie chart container -->
         <div id="chart">
         </div>
     </section>
