Add aria-label to how to drop down

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section>
         <div class="container">
             <details id="how-to-use" >
-                <summary>
+                <summary aria-label="Click for a summary of how to use the calculator.">
                     How to use
                 </summary>
                 <div id="how-to-info">
@@ -34,7 +34,7 @@
         </div>
         <div class="container" id="currency-wrapper">
             <label for="currency">Select Currency</label>
-            <select name="currency" id="currency">
+            <select name="currency" id="currency" >
                 <option value="£" selected>£ GBP</option>
                 <option value="€">€ EUR</option>
                 <option value="$">$ USD</option>
